# odin

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
docs/: SCENARIOS.md
docs/superpowers/plans/: 2026-06-21-allfather-walking-skeleton.md
docs/superpowers/specs/: 2026-06-21-allfather-design.md
src/odin/: __init__.py  __main__.py  orchestrator.py  process.py  resources.py  server.py
src/odin/_ui/: index.html
src/odin/agent/: brain.py  client.py  completion.py  prompt.py  tools.py
src/odin/api/: canvas.py  resources.py  ws.py
src/odin/aws/: catalog_gen.py  embed.py  provision.py  rds.py
src/odin/compute/: cloud_init.py  container_manager.py  lima_yaml.py  models.py  vm_manager.py
src/odin/fabric/: localhost.py  models.py  nebula.py
src/odin/mcp/: tools.py
src/odin/spec/: store.py  (+2 more)
tests/: conftest.py  test_process.py
tests/agent/: test_brain.py  test_completion.py
tests/api/: test_apply.py  test_environments.py  test_ws.py
tests/aws/: test_aws_usable_e2e.py  test_catalog_gen.py  test_embed.py  test_multikind_e2e.py  test_provision_e2e.py  test_rds_rewire.py  test_skeleton_e2e.py
tests/fabric/: test_localhost.py  test_nebula.py
tests/reconcile/: test_plan.py  test_probes.py  test_reconciler.py  test_scheduler.py
tests/runtime/: test_colima.py  test_driver.py  test_lima.py  test_lima_integration.py
tests/spec/: test_models.py  test_store.py  test_translate.py
tests/test_agent/: test_client.py  test_integration.py  test_prompt.py  test_tools.py
tests/test_api/: test_canvas.py  test_resources.py  test_validate.py
tests/test_compute/: test_cloud_init.py  test_container_manager.py  test_integration.py  test_lima_yaml.py  test_models.py  test_vm_manager.py
tests/test_network/: test_integration.py  test_models.py  test_nebula_manager.py  test_vpc_mapper.py
tests/test_simulator/: test_engine.py  test_executor.py  test_executor_metadata.py  test_mcp_tools.py  test_orchestrator.py  test_registry.py  test_simulation.py  test_status_mapping.py
tests/test_terraform/: test_advanced.py  test_dynamodb.py  test_extras.py  test_messaging.py  test_monitoring.py  test_provider.py  test_runner.py  test_services.py
ui/: index.html  package.json  tsconfig.json  vite.config.js
ui/src/: App.tsx  app.css  main.tsx  vite-env.d.ts
(+41 files in other folders)
