[project]
name = "odin"
version = "0.1.0"
description = "AI-controlled local AWS simulator"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "moto[server,ec2,s3,iam,lambda]>=5.0",
    "boto3>=1.35",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=14.0",
    "anyio>=4.0",
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "claude-agent-sdk>=0.1.39",
    "typer>=0.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
odin = "odin.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/odin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-m", "not integration"]
markers = [
    "integration: opt-in tests that require real Lima VMs (deselected by default)",
]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]
