[project]
name = "odin"
version = "0.2.0"
description = "allfather: a Mac-native, AI-operated orchestration canvas. Drop apps + AWS resources, the AI completes config, a control loop runs them for real on Colima/Lima with an embedded MiniStack AWS control plane."
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "boto3>=1.35",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=14.0",
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "claude-agent-sdk>=0.1.39",
    "typer>=0.15",
    "ministack>=1.3.66",
    "psycopg2-binary>=2.9.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
odin = "odin.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/odin"]
# Include the bundled UI (gitignored, copied in at release/build time).
artifacts = ["src/odin/_ui/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-m", "not integration"]
markers = [
    "integration: needs real Colima/Lima/MiniStack or the Claude agent — off by default",
]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]
